--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,14 +35,15 @@ body {
   .mat-stroked-button {
     width: 56px;
     height: 56px;
-    mat-iconicon{
-      fill: rgb(36, 34, 34);
-      color: rgb(36, 34, 34);
+    border-color: whitesmoke;
+    mat-icon{
+      fill: whitesmoke;
+      color: whitesmoke;
     }
   }
   .mat-stroked-button:not([disabled]) {
-    border-color: rgb(37, 36, 36);
-    color: rgb(36, 34, 34);
+    border-color: rgb(250, 250, 250);
+    color: rgb(252, 248, 248);
   }
   .mat-stroked-button:not([disabled]):hover {
     border-color: rgb(37, 36, 36);
@@ -210,17 +211,9 @@ app-header-name{
     width: 100vw;
     height: 86vh;
     margin: 0;
-/*     -webkit-box-shadow: 10px 0px 13px 0px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 10px 0px 13px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: 10px 0px 13px 0px rgba(0, 0, 0, 0.75); */
+
   }
 
-  .header,
-  .mat-toolbar {
-/*     -webkit-box-shadow: 10px 0px 13px 0px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 10px 0px 13px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: 10px 0px 13px 0px rgba(0, 0, 0, 0.75); */
-  }
 
   .section {
     width: 100%;
