refactoring dashbord menu rows

--- a/src/app/commun/top-header/top-header.component.html
+++ b/src/app/commun/top-header/top-header.component.html
@@ -7,6 +7,6 @@
         <mat-icon>settings</mat-icon>
     </button>
     
-    <div class="top-header-orange">&nbsp;</div>
+    <div class="top-header-orange"></div>
 
 </div>
