--- a/src/app/commun/header-name/header-name.component.scss
+++ b/src/app/commun/header-name/header-name.component.scss
@@ -2,18 +2,9 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    margin-top: 4px;
   }
 
-/*   .white-line {
-    width: 100%;
-    height: 4px;
-    background-color: whitesmoke;
-  }
-  .lighter-line {
-    width: 100%;
-    height: 4px;
-    background-color: rgba(138, 222, 230, 0.788);
-  } */
   .text-line {
     width: 100%;
     height: 20px;
