--- a/src/app/dashboard/dash/dash.component.scss
+++ b/src/app/dashboard/dash/dash.component.scss
@@ -2,7 +2,7 @@
   background-image: url("./../../../assets/img/alphapro2.jpg");
   background-size: cover;
   background-position: center;
-  position: relative;
+  display: flex;
 }
 
 .title {
@@ -17,15 +17,13 @@
 
 .dash-form {
   width: 100%;
-  height: 410px;
-  position: absolute;
-  bottom: 70px;
   display: flex;
+  flex-grow: 1;
   flex-direction: column-reverse;
-  justify-content: space-evenly;
+  justify-content: center;
 
   .aluno-select {
-    font-size: large;
+    font-size: 20px;
     color: white;
     width: 100%;
     background-color: rgba(100, 100, 100, 0.7);
@@ -58,8 +56,9 @@
 
 .dash-buttons-action_block {
   width: 100%;
-  height: 81.3px;
-  font-size: large;
+  height: 50px;
+  margin-bottom: 4px;
+  font-size: 20px;
   color: whitesmoke;
   background-color: rgba(100, 100, 100, 0.7);
   display: flex;
@@ -72,10 +71,8 @@
     display: inline-flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 24px;
     img{
-      width: 50px;
-      height: auto;
+      height: 40px;
     }
     .lb{
       width: 70%;
