--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,6 +49,10 @@ body {
     border-color: rgb(37, 36, 36);
     background-color: rgba(245, 245, 245, 0.555);
   }
+
+  .dialog-inputs {
+    color: black;
+  }
 }
 
 em {
