--- a/src/app/avaliation/componente-morfologica/im/im.component.html
+++ b/src/app/avaliation/componente-morfologica/im/im.component.html
@@ -3,7 +3,7 @@
 
     <div class="section">
         <h1 class="h1-title" i18n>IMC - Índice de Massa Corporal</h1>
-        <form #f="ngForm">
+        <form #f="ngForm" autocomplete="off">
             <table class="section-table">
                 <thead>
                     <tr>
