--- a/src/app/avaliation/componente-morfologica/indice-conicidade/indice-conicidade.component.html
+++ b/src/app/avaliation/componente-morfologica/indice-conicidade/indice-conicidade.component.html
@@ -2,7 +2,7 @@
     <app-header-name></app-header-name>
     <div class="section">
         <h1 class="h1-title" i18n>IC - Índice de Conicidade</h1>
-        <form class="section-form" #f="ngForm" (submit)="save(f.value)">
+        <form class="section-form" #f="ngForm" (submit)="save(f.value)" autocomplete="off">
             <table class="section-table">
                 <thead>
                     <tr>
