--- a/src/app/avaliation/composicao-corporal/scaner/scaner.component.html
+++ b/src/app/avaliation/composicao-corporal/scaner/scaner.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <app-header-name></app-header-name>
     <div class="section">
-        <h1 class="h1-title" i18n>SCANER</h1>
+        <h1 class="h1-title" i18n>SCANNER</h1>
         <form #f="ngForm" (submit)="save(f.value)">
           <!--   <input type="hidden" name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura"> -->
             <table>
