--- a/src/app/avaliation/anamenese/anamenese.component.html
+++ b/src/app/avaliation/anamenese/anamenese.component.html
@@ -12,7 +12,7 @@
           </mat-panel-title>
           <mat-panel-description>&nbsp;</mat-panel-description>
         </mat-expansion-panel-header>
-        <form #fs1="ngForm" (submit)="saveObjetivos(fs1.value)">
+        <form #fs1="ngForm" (submit)="saveObjetivos(fs1.value)" autocomplete="off">
           <mat-card>
             <mat-card-content>
 
@@ -110,7 +110,7 @@
           </mat-panel-title>
           <mat-panel-description>&nbsp;</mat-panel-description>
         </mat-expansion-panel-header>
-        <form #fev="ngForm" (submit)="saveEstiloVida(fev.value)">
+        <form #fev="ngForm" (submit)="saveEstiloVida(fev.value)" autocomplete="off">
 
           <mat-card>
             <mat-card-header>
@@ -222,7 +222,7 @@
           </mat-panel-title>
           <mat-panel-description>&nbsp;</mat-panel-description>
         </mat-expansion-panel-header>
-        <form #fhp="ngForm" (submit)="saveHistoricoPatologico(fhp.value)">
+        <form #fhp="ngForm" (submit)="saveHistoricoPatologico(fhp.value)" autocomplete="off">
 
           <mat-card>
             <mat-card-content>
@@ -410,7 +410,7 @@
           </mat-panel-title>
           <mat-panel-description>&nbsp;</mat-panel-description>
         </mat-expansion-panel-header>
-        <form #fpf="ngForm" (submit)="savePatologiaFamiliar(fpf.value)">
+        <form #fpf="ngForm" (submit)="savePatologiaFamiliar(fpf.value)" autocomplete="off">
           <mat-card>
             <mat-card-content>
               <mat-label i18n>Alguém da familia com estas carateristicas?</mat-label>
@@ -547,7 +547,7 @@
           <mat-panel-title i18n="Label">Hábitos Sociais</mat-panel-title>
           <mat-panel-description>&nbsp;</mat-panel-description>
         </mat-expansion-panel-header>
-        <form #fhs="ngForm" (submit)="saveHabitosSociais(fhs.value)">
+        <form #fhs="ngForm" (submit)="saveHabitosSociais(fhs.value)" autocomplete="off">
 
           <!--  Bebida -->
           <mat-card>
@@ -567,15 +567,15 @@
               <br />
               <mat-label i18n *ngIf="Q4BB.value==1">Há quanto tempo?</mat-label>
               <mat-form-field class="input-sm" *ngIf="Q4BB.value==1">
-                <input matInput i18n placeholder="Anos" #Q4BBA="ngModel" name="Q4BBA" [(ngModel)]="student.Q4BBA">
+                <input matInput i18n placeholder="Anos" #Q4BBA="ngModel" name="Q4BBA" (focus)="$event.target.select()" [(ngModel)]="student.Q4BBA">
               </mat-form-field>
               <mat-form-field class="input-sm" *ngIf="Q4BB.value==1">
-                <input matInput i18n placeholder="Meses" #Q4BBM="ngModel" name="Q4BBM" [(ngModel)]="student.Q4BBM">
+                <input matInput i18n placeholder="Meses" #Q4BBM="ngModel" name="Q4BBM" (focus)="$event.target.select()" [(ngModel)]="student.Q4BBM">
               </mat-form-field>
               <mat-form-field class="input-md" *ngIf="Q4BB.value==1">
                 <mat-label i18n>Quantas vezes por semana?</mat-label>
                 <input matInput class="input-md" i18n placeholder="vezes" #Q4BBVEZES="ngModel" name="Q4BBVEZES"
-                  [(ngModel)]="student.Q4BBVEZES">
+                (focus)="$event.target.select()" [(ngModel)]="student.Q4BBVEZES">
               </mat-form-field>
               <mat-form-field class="input-lg">
                 <mat-label i18n="Label">Observações</mat-label>
@@ -701,22 +701,22 @@
               <mat-form-field class="input-md" *ngIf="fumante.value=='S' || fumante.value=='E'">
                 <mat-label i18n>Quantos cigarros por dia?</mat-label>
                 <input matInput class="input-md" i18n placeholder="nº de cigarros" #qtos="ngModel" name="qtos"
-                  [(ngModel)]="student.qtos">
+                (focus)="$event.target.select()" [(ngModel)]="student.qtos">
               </mat-form-field>
               <br />
               <mat-label i18n *ngIf="fumante.value=='S' || fumante.value=='E'">Há quanto tempo?</mat-label>
               <mat-form-field class="input-sm" *ngIf="fumante.value=='S' || fumante.value=='E'">
-                <input matInput i18n placeholder="Anos" #Q4ATA="ngModel" name="Q4ATA" [(ngModel)]="student.Q4ATA">
+                <input matInput i18n placeholder="Anos" #Q4ATA="ngModel" name="Q4ATA" (focus)="$event.target.select()" [(ngModel)]="student.Q4ATA">
               </mat-form-field>
               <mat-form-field class="input-sm" *ngIf="fumante.value=='S' || fumante.value=='E'">
-                <input matInput i18n placeholder="Meses" #Q4ATM="ngModel" name="Q4ATM" [(ngModel)]="student.Q4ATM">
+                <input matInput i18n placeholder="Meses" #Q4ATM="ngModel" name="Q4ATM" (focus)="$event.target.select()" [(ngModel)]="student.Q4ATM">
               </mat-form-field>
               <mat-label i18n *ngIf="fumante.value == 'N'">Se parou, há quanto tempo?</mat-label>
               <mat-form-field class="input-sm" *ngIf="fumante.value == 'N'">
-                <input matInput placeholder="Anos" #Q4APA="ngModel" name="Q4APA" [(ngModel)]="student.Q4APA">
+                <input matInput placeholder="Anos" #Q4APA="ngModel" name="Q4APA" (focus)="$event.target.select()" [(ngModel)]="student.Q4APA">
               </mat-form-field>
               <mat-form-field class="input-sm" *ngIf="fumante.value == 'N'">
-                <input matInput i18n placeholder="Meses" #Q4APM="ngModel" name="Q4APM" [(ngModel)]="student.Q4APM">
+                <input matInput i18n placeholder="Meses" #Q4APM="ngModel" name="Q4APM" (focus)="$event.target.select()" [(ngModel)]="student.Q4APM">
               </mat-form-field>
               <mat-form-field class="input-lg">
                 <mat-label i18n="Label">Observações</mat-label>
@@ -745,7 +745,7 @@
           <mat-panel-description>&nbsp;</mat-panel-description>
         </mat-expansion-panel-header>
 
-        <form #fqa="ngForm" (submit)="saveQueixasAtuais(fqa.value)">
+        <form #fqa="ngForm" (submit)="saveQueixasAtuais(fqa.value)" autocomplete="off">
           <mat-card>
             <mat-card-content>
               <div class="check-box">
