--- a/src/app/avaliation/composicao-corporal/cc.component.html
+++ b/src/app/avaliation/composicao-corporal/cc.component.html
@@ -141,7 +141,7 @@
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/scaner">
-                        <mat-card-subtitle i18n="Subtitle">SCANER</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">SCANNER</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
             </mat-expansion-panel>
