--- a/src/app/avaliation/risco/rdc/rdc.component.html
+++ b/src/app/avaliation/risco/rdc/rdc.component.html
@@ -3,7 +3,7 @@
 
     <div class="section">
         <h1 class="h1-title" i18n>Risco de Desenvolvimento de Cardiopatia</h1>
-        <form class="flex-form" #f="ngForm" (submit)="save(f.value)">
+        <form class="flex-form" #f="ngForm" (submit)="save(f.value)" autocomplete="off">
             <mat-card>
                 <mat-card-header>
                     <mat-card-subtitle i18n>Pressão Arterial (mm/Hg)</mat-card-subtitle>
@@ -13,13 +13,13 @@
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Sistólica</mat-label>
-                                <input matInput #qtas="ngModel" name="qtas" [(ngModel)]="rdcData.qtas" (change)="calcRisco(f.value)">
+                                <input matInput #qtas="ngModel" name="qtas" (focus)="$event.target.select()" [(ngModel)]="rdcData.qtas" (change)="calcRisco(f.value)">
                             </mat-form-field>
                         </mat-list-item>
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Diastólica</mat-label>
-                                <input matInput #qtad="ngModel" name="qtad" [(ngModel)]="rdcData.qtad" (change)="calcRisco(f.value)">
+                                <input matInput #qtad="ngModel" name="qtad" (focus)="$event.target.select()" [(ngModel)]="rdcData.qtad" (change)="calcRisco(f.value)">
                             </mat-form-field>
                         </mat-list-item>
                     </mat-list>
@@ -34,7 +34,7 @@
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Cigarros por dia</mat-label>
-                                <input matInput readonly #qtos="ngModel" name="qtos" [ngModel]="rdcData.qtos">
+                                <input matInput #qtos="ngModel" name="qtos" (focus)="$event.target.select()" [ngModel]="rdcData.qtos">
                             </mat-form-field>
                         </mat-list-item>
                     </mat-list>
@@ -49,25 +49,25 @@
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Colesterol Total</mat-label>
-                                <input matInput #lsc="ngModel" name="lsc" [(ngModel)]="rdcData.lsc" (change)="calcRisco(f.value)">
+                                <input matInput #lsc="ngModel" name="lsc" (focus)="$event.target.select()" [(ngModel)]="rdcData.lsc" (change)="calcRisco(f.value)">
                             </mat-form-field>
                         </mat-list-item>
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Fração CT/HDL-C</mat-label>
-                                <input matInput #lsf="ngModel" name="lsf" [(ngModel)]="rdcData.lsf" (change)="calcRisco(f.value)">
+                                <input matInput #lsf="ngModel" name="lsf" (focus)="$event.target.select()" [(ngModel)]="rdcData.lsf" (change)="calcRisco(f.value)">
                             </mat-form-field>
                         </mat-list-item>
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Triglicerídeos</mat-label>
-                                <input matInput #lst="ngModel" name="lst" [(ngModel)]="rdcData.lst" (change)="calcRisco(f.value)">
+                                <input matInput #lst="ngModel" name="lst" (focus)="$event.target.select()" [(ngModel)]="rdcData.lst" (change)="calcRisco(f.value)">
                             </mat-form-field>
                         </mat-list-item>
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Glicemia</mat-label>
-                                <input matInput #lsg="ngModel" name="lsg" [(ngModel)]="rdcData.lsg" (change)="calcRisco(f.value)">
+                                <input matInput #lsg="ngModel" name="lsg" (focus)="$event.target.select()" [(ngModel)]="rdcData.lsg" (change)="calcRisco(f.value)">
                             </mat-form-field>
                         </mat-list-item>
                     </mat-list>
@@ -102,7 +102,7 @@
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Percentagem</mat-label>
-                                <input matInput #gc="ngModel" name="gc" [(ngModel)]="rdcData.gc" (change)="calcRisco(f.value)">
+                                <input matInput #gc="ngModel" name="gc" [(ngModel)]="rdcData.gc" (focus)="$event.target.select()" (change)="calcRisco(f.value)">
                             </mat-form-field>
                         </mat-list-item>
                     </mat-list>
@@ -138,7 +138,7 @@
                             <mat-form-field>
                                 <mat-label i18n>Frequência Semanal</mat-label>
                                 <input matInput #fs="ngModel" name="fs" [(ngModel)]="rdcData.fs"
-                                    placeholder="vezes por semana" (change)="calcRisco(f.value)">
+                                    placeholder="vezes por semana" (focus)="$event.target.select()" (change)="calcRisco(f.value)">
                             </mat-form-field>
                         </mat-list-item>
                         <mat-list-item>
